fix:修改了index页面主菜单

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav class="container">
             <ul class="nav-list">
                 <li>基础版</li>
-                <li>进阶版</li>
-                <li>进入后台</li>
+                <!-- <li>进阶版</li>
+                <li>进入后台</li> -->
             </ul>
         </nav>
     </header>
