--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
                         <span>图片 : &nbsp;</span>
                         <input type="file" name="file" accept="image/*">
                     </div>
+                    <div class="tp2">
+                        <img src="test.png" alt="">
+                        <div>X</div>
+                    </div>
                     <div class="button">
                         <input type="button" value="取消" onclick="hide()">
                         <input type="button" value="修改" onclick="save()">
